fix layout issues
see #87
-adding pull to refresh
-use cleaner buttons

--- a/app/src/styles/main.scss
+++ b/app/src/styles/main.scss
@@ -106,7 +106,7 @@ ion-tabs {
   background-color: #DEDEDE;
 }
 
-.tabs-positive > .tabs, .tabs.tabs-positive {
+.tabs-positive > .tabs, .tabs-positive.tabs-striped > .tabs{
   border-color: #145fd7;
   background-color: #153D8E;
 }
